Рефакторинг по реквесту #3

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -18,6 +18,11 @@
       <Reference Include="Microsoft.Extensions.Logging.Abstractions">
         <HintPath>..\..\..\.nuget\packages\microsoft.extensions.logging.abstractions\8.0.0-rc.2.23479.6\lib\net8.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-rc.1.22426.10" />
     </ItemGroup>
 
 </Project>
