--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DataLib\DataLib.csproj" />
+      <ProjectReference Include="..\DbStorage\DbStorage.csproj" />
     </ItemGroup>
 
 
