Debug: - Работы консольного приложения с веб сервисами Opponents

--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -8,7 +8,7 @@
     },
     "ConnectionStrings": {
         "ExperimentDatabase": "Data Source=helloapp.db",
-        "Player1": "http://localhost:5031/player",
-        "Player2": "http://localhost:5032/player"
+        "Player1": "http://localhost:5031/opponent",
+        "Player2": "http://localhost:5032/opponent"
     }
 }
