--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -7,8 +7,8 @@
         }
     },
     "ConnectionStrings": {
-        "ExperimentDatabase": "Data Source=helloapp.db",
-        "Player1": "http://localhost:5031/opponent",
-        "Player2": "http://localhost:5032/opponent"
+        "Database": "Data Source=helloapp.db",
+        "Opponents1": "http://localhost:5031/opponent",
+        "Opponents2": "http://localhost:5032/opponent"
     }
 }
